# ffmpeg

./: README.md
app/: build.gradle
app/src/androidTest/java/com/live/ffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioData.hpp  AudioDataProvider.cpp  AudioDataProvider.h  AudioDecoder.cpp  AudioDecoder.h  AudioEncoder.cpp  AudioEncoder.h  CMakeLists.txt  FFmpegMusic.cpp  FFmpegMusic.h  FFmpegUtils.cpp  FFmpegUtils.h  FFmpegVideo.cpp  FFmpegVideo.h  FrameDecoder.cpp  FrameDecoder.h  FrameEncoder.cpp  FrameEncoder.h  RtmpLivePublish.cpp  RtmpLivePublish.h  VideoDecoder.cpp  VideoDecoder.h  native-lib.cpp  wavreader.c
app/src/main/cpp/ffmpeg/libavutil/: common.h
app/src/main/cpp/yuv/: types.h  yuv2rgb.cpp  yuv2rgb.h
app/src/main/java/com/live/ffmpeg/: MainActivity.java
app/src/main/java/com/live/ffmpeg/audio/: AudioData.java  AudioRecoderManager.java
app/src/main/java/com/live/ffmpeg/camera/: AutoFitTextureView.java  BaseTexureView.java  CameraUtils.java  OnGetImageListener.java  PinMuUtils.java  RecordAudio.java  VideoData.java
app/src/main/java/com/live/ffmpeg/camera/listener/: CameraNVDataListener.java  CameraSurfaceListener.java  CameraYUVDataListener.java
app/src/main/java/com/live/ffmpeg/ffmpeg/: FFmpegUtils.java
app/src/main/java/com/live/ffmpeg/que/: MediaEncoder.java  MediaPublisher.java
app/src/main/java/com/live/ffmpeg/utis/: Contacts.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/live/ffmpeg/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
